--- a/index.html
+++ b/index.html
@@ -18,19 +18,24 @@
 			margin-left: 100px;
 		}
 
-		img {
+		#container {
 			border:1px solid #000;
-			max-height: 60%;
-			max-width: 60%;
+			width: 60%;
+			height: 60vw;
 			display: block;
 			margin: auto;
 		}
 
-		img + img {
-			position:absolute;
-			top:0;
-			left:0;
+		img {
+			position: absolute;
+			max-height: 100%;
+			max-width: 100%;
 		}
+
+		img + img {
+			position: absolute;
+		}
+
 
 	</style>
 </head>
@@ -39,7 +44,10 @@
 <center><font face="Hiragino sans" color=#464646 size="7">Component Explorer Demo</font></center>
 <div id="main"><font face="Hiragino sans" color=#323232 size="4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</font></div>
 
-<img id="layer_1"  src="photos/layer_1_demo.png">
+<div id="container">
+<img id="layer_2" src="photos/layer_2_demo.png">
+<img id="layer_1" src="photos/layer_1_demo.png">
+</div>
 
 
 <script type="text/javascript" src="explorer.js"></script>
