basic functionality for dialog now working.  stylesheet, animation, x button, and arrow still left to implement

--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
 </head>
 <body>
 
-<div id="dialog_container">
-	<p>some text</p>
-</div>
-<div id="container">
-</div>
-
+<div id="explorer"></div>
 
 <script type="text/javascript" src="explorer.js"></script>
 
