--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 </head>
 <body>
 
-<div id="explorer"></div>
+<div id="dialog_container">
+	<p>some text</p>
+</div>
+<div id="container">
+</div>
+
 
 <script type="text/javascript" src="explorer.js"></script>
 
