Revert "compressed everything into one stylesheet"
This reverts commit 5af28d421b2396fedb19a76de83c144d33033faa.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,82 @@
 	<meta charset="utf-8">
 	<! --- jquery --- >
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<! --- remodal --- >
 	<script src="Remodal/dist/remodal.min.js"></script>
 	<! --- title --- >
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>Component Explorer</title>
-	<link rel="stylesheet" href="cur.css">
+	<style>
+		.remodal-overlay {
+			opacity: 0;
+		}
+		.remodal {
+			color: #2b2e38;
+			background: rgba(255, 255, 255, 0.7);
+			max-width: 55%;
+			max-height: 55%;
+		}
+		.remodal-bg.remodal-is-opening,
+		.remodal-bg.remodal-is-opened {
+			-webkit-filter: blur(5px);
+			filter: blur(5px);
+		}
+
+		.remodal-overlay.remodal-is-opening,
+		.remodal-overlay.remodal-is-closing {
+		  -webkit-animation-duration: 0s;
+		  animation-duration: 0s;
+		  -webkit-animation-fill-mode: forwards;
+		  animation-fill-mode: forwards;
+		}
+
+		.remodal-overlay.remodal-is-opening {
+		  -webkit-animation-name: remodal-overlay-opening-keyframes;
+		  animation-name: remodal-overlay-opening-keyframes;
+		}
+
+		.remodal-overlay.remodal-is-closing {
+		  -webkit-animation-name: remodal-overlay-closing-keyframes;
+		  animation-name: remodal-overlay-closing-keyframes;
+		}
+
+		@-webkit-keyframes remodal-overlay-opening-keyframes {
+		  from {
+		    opacity: 0;
+		  }
+		  to {
+		    opacity: 0;
+		  }
+		}
+
+		@keyframes remodal-overlay-opening-keyframes {
+		  from {
+		    opacity: 0;
+		  }
+		  to {
+		    opacity: 0;
+		  }
+		}
+
+		@-webkit-keyframes remodal-overlay-closing-keyframes {
+		  from {
+		    opacity: 0;
+		  }
+		  to {
+		    opacity: 0;
+		  }
+		}
+
+		@keyframes remodal-overlay-closing-keyframes {
+		  from {
+		    opacity: 0;
+		  }
+		  to {
+		    opacity: 0;
+		  }
+		}
+
+
+	</style>
 </head>
 <body>
 
