everything now uses the correct fonts, only waiting on the leader lines and related labels as well as the new render

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 	<title>Component Explorer</title>
 </head>
 <body>
-
+<! --- the explorer interactive --- >
 <div id="container">
 </div>
-
-
+<! --- the script --- >
 <script type="text/javascript" src="explorer.js"></script>
-
 </body>
 </html>
